# ai-convex-clone

./: .gitignore  Cargo.toml  README.md  biome.json  bunfig.toml  package.json  tsconfig.base.json
crates/core-db/: Cargo.toml
crates/core-db/benches/: write_batch.rs
crates/core-db/src/: database.rs  document.rs  engine.rs  error.rs  lib.rs  schema.rs  table.rs  transaction.rs  types.rs
crates/core-db/src/index/: mod.rs  registry.rs
crates/core-db/src/schema/: mod.rs
crates/core-db/src/values/: id.rs  mod.rs
crates/core-db/tests/: engine_integration.rs
