[package]
name = "core-db"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.15", features = ["serde", "v7"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "write_batch"
harness = false

[lints]
workspace = true
